# randey

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
glsl/: fShader.glsl  lightFShader.glsl  lightVShader.glsl  vShader.glsl
glsl/directional_shadow_pass/: fShader.glsl  vShader.glsl
glsl/forward_pass/: fshader.glsl  vshader.glsl
glsl/geometry_pass/: fshader.glsl  vshader.glsl
glsl/light_pass/: fShader_dir_light.glsl  fShader_point_light.glsl  vShader.glsl
glsl/point_shadow_pass/: fShader.glsl  gShader.glsl  vShader.glsl
glsl/screen_quad/: fShader.glsl  vShader.glsl
glsl/shadow_pass/: fShader.glsl  vShader.glsl
glsl/skybox/: fShader.glsl  vShader.glsl
glsl/stencil_pass/: fShader.glsl  vShader.glsl
glsl/transparency/: fShader.glsl  vShader.glsl
glsl/transparency_pass/: fShader.glsl  fShader_composite.glsl  vShader.glsl  vShader_composite.glsl
inc/buffers/: gbuffer.hpp  shadow_map_FBO.hpp  transparency_FBO.hpp  uniform_buffer_object.hpp
inc/core/: camera.hpp  cubemap_texture.hpp  material.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  texture.hpp  transform.hpp  utils.hpp
inc/lights/: directional_light.hpp  point_light.hpp
inc/managers/: input_manager.hpp  resource_manager.hpp
scenes/: sponza.toml
src/: main.cpp
src/buffers/: gbuffer.cpp  shadow_map_FBO.cpp  transparency_FBO.cpp  uniform_buffer_object.cpp
src/core/: camera.cpp  cubemap_texture.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  transform.cpp  utils.cpp
src/lights/: directional_light.cpp  point_light.cpp
src/managers/: input_manager.cpp  resource_manager.cpp
